Amend login labels to stop jump

--- a/administrator/templates/atum/css/template.css
+++ b/administrator/templates/atum/css/template.css
@@ -557,6 +557,12 @@ iframe {
     @media (max-width: 575.98px) {
       .view-login .login-box-body {
         padding: 10px; } }
+  .view-login .form-group label {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end; }
+    .view-login .form-group label span {
+      color: #c6d2de; }
   .view-login h1 {
     text-align: center;
     margin: 0; }
@@ -1370,7 +1376,7 @@ joomla-alert {
     box-shadow: -1px 0 0 rgba(0, 0, 0, 0.05); }
     .nav.nav-tabs .nav-link.active {
       background-color: rgba(0, 0, 0, 0.03);
-      background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.05) 100%);
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05) 100%);
       border-right: 0;
       border-left: 0;
       border-top-left-radius: 0;
