--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -62,6 +62,17 @@
     }
   }
 
+  .form-group {
+    label {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      span {
+        color: #c6d2de;
+      }
+    }
+  }
+
   h1 {
     text-align: center;
 	margin: 0;
